# lms

./: .env.example  .gitignore  CLAUDE.md  FUTURE.md  README.md  goals.md  pyproject.toml
lean/: LMS.lean  Main.lean  lake-manifest.json  lakefile.toml
lean/LMS/: Basic.lean  Foundation.json  Foundation.lean  Yoneda.lean  YonedaAgent.lean
lean/LMS/Temp/: verify_f5413690.lean
lms/: __init__.py  agent.py  artifacts.py  config.py  crash_log.py  dependency.py  foundation.py  goals.py  metrics.py  planning.py  prompts.py  run.py  society.py  textbook.py  traces.py  voting.py  working_group.py
lms/lean/: __init__.py  interface.py  mcp.py  mock.py  project.py  real.py
lms/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
specs/: benchmark.md  interactive_society.md  pr_plan.md
tests/: __init__.py  test_agent.py  test_artifacts.py  test_config.py  test_crash_log.py  test_dependency.py  test_foundation.py  test_goals.py  test_lean.py  test_lean_project.py  test_lean_real.py  test_metrics.py  test_planning.py  test_providers.py  test_society.py  test_textbook.py  test_traces.py  test_voting.py  test_working_group.py
